--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,14 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "infyomlabs/adminlte-templates": "^3.0",
+        "infyomlabs/laravel-generator": "^3.0",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^2.9",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "3.0",
+        "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.5"
     },
     "require-dev": {
