--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.7",
         "axios": "^1.2.1",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
+        "popper.js": "^1.12",
         "postcss": "^8.4.14",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0",
         "tailwindcss": "^3.1.0",
         "webpack-cli": "^5.0.1"
     }
