--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "3.0",
         "laravelcollective/html": "^6.2",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "select2/select2": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
