--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "axios": "^1.2.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
+        "jquery": "^3.7.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
@@ -27,5 +27,8 @@
         "sass-loader": "^8.0.0",
         "tailwindcss": "^3.1.0",
         "webpack-cli": "^5.0.1"
+    },
+    "dependencies": {
+        "select2": "^4.1.0-rc.0"
     }
 }
